--- a/root/form.html
+++ b/root/form.html
@@ -103,7 +103,7 @@
         </form>
        <!--Aca el Boton de  + -->
     <div class="contenedor-boton-volver">
-        <a href="./Home.html">
+        <a href="./index.html">
         <button class="boton-volver">Volver</button>
     </a>
     </div>
