Se agregan card

--- a/root/index.html
+++ b/root/index.html
@@ -31,9 +31,9 @@
         <div class="card-super-hero">
             <header>
                 <figure>
-                    <img class="baticueva" src="./img/Mask Group.png" alt="baticueva">
+                    <img class="header-image" src="./img/Mask Group (4).png" alt="baticueva">
                     <img class="corazon" src="./img/Frame.png" alt="corazon">
-                    <img class="perfil-imagen" src="./img/Group 22.png" alt="batman">
+                    <img class="perfil-imagen" src="./img/Group 22 .png" alt="batman">
                 </figure>
             </header>
             <footer class="footer-card">
@@ -48,16 +48,14 @@
         <div class="card-super-hero">
             <header>
                 <figure>
-                    <img class="baticueva" src="./img/Mask Group.png" alt="baticueva">
+                    <img class="header-image" src="./img/Mask Group (1).png" alt="baticueva">
                     <img class="corazon" src="./img/Frame.png" alt="corazon">
-                    <img class="perfil-imagen" src="./img/Group 22.png" alt="batman">
+                    <img class="perfil-imagen" src="./img/Group 23.png" alt="batman">
                 </figure>
             </header>
             <footer class="footer-card">
-                <h2>BATMAN</h2>
-                <P>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective
-                    Comics,
-                    Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing
+                <h2>MUJER MARAVILLA</h2>
+                <P>Es una superheroína creada por William Moulton Marston para la editorial DC Comics. Es una princesa guerrera de las Amazonas, pueblo ficticio basado en el de las amazonas de la mitología griega. En su tierra natal es conocida como la princesa Diana de Temiscira pero fuera de esta utiliza la identidad secreta de Diana Prince.
                 </P>
                 <button class="button-card">Ver Mas</button>
             </footer>
@@ -65,16 +63,29 @@
         <div class="card-super-hero">
             <header>
                 <figure>
-                    <img class="baticueva" src="./img/Mask Group.png" alt="baticueva">
+                    <img class="header-image" src="./img/Mask Group (2).png" alt="baticueva">
                     <img class="corazon" src="./img/Frame.png" alt="corazon">
-                    <img class="perfil-imagen" src="./img/Group 22.png" alt="batman">
+                    <img class="perfil-imagen" src="./img/Group 24.png" alt="batman">
                 </figure>
             </header>
             <footer class="footer-card">
-                <h2>BATMAN</h2>
-                <P>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective
-                    Comics,
-                    Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing
+                <h2>SUPERMAN</h2>
+                <P>Es un superhéroe que apareció por primera vez en los cómics estadounidenses publicados por DC Comics. ​ El personaje fue creado por el escritor estadounidense Jerry Siegel y el artista canadiense Joe Shuster en 1933 cuando ambos se encontraban viviendo en Cleveland, Ohio.
+                </P>
+                <button class="button-card">Ver Mas</button>
+            </footer>
+        </div>
+        <div class="card-super-hero">
+            <header>
+                <figure>
+                    <img class="header-image" src="./img/Mask Group (3).png" alt="baticueva">
+                    <img class="corazon" src="./img/Frame.png" alt="corazon">
+                    <img class="perfil-imagen" src="./img/Group 25.png" alt="batman">
+                </figure>
+            </header>
+            <footer class="footer-card">
+                <h2>Harley Quinn</h2>
+                <P>Harley Quinn es un personaje ficticio creado por los estadounidenses Paul Dini y Bruce Timm para la editorial DC Comics. Quinn hizo su debut en el vigésimo-segundo episodio de Batman: la serie animada, «El favor del Joker», en septiembre de 1992 y se convirtió en una villana recurrente en la serie
                 </P>
                 <button class="button-card">Ver Mas</button>
             </footer>
