Se modifican las carpetas

--- a/root/form/form.html
+++ b/root/form/form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="../style/form.css">
     <title>Form</title>
 </head>
 
@@ -103,7 +103,7 @@
         </form>
        <!--Aca el Boton de  + -->
     <div class="contenedor-boton-volver">
-        <a href="./index.html">
+        <a href="../index.html">
         <button class="boton-volver">Volver</button>
     </a>
     </div>
