--- a/root/index.html
+++ b/root/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="./style/home.css">
     <title>Home</title>
 </head>
 
@@ -93,7 +93,7 @@
     </section>
     <!--Aca el Boton de  + -->
     <div class="contenedor-boton-mas">
-        <a href="./form.html">
+        <a href="./form/form.html">
         <button class="boton-mas">+</button>
     </a>
     </div>
