Se ajustan las rutas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/home.css">
+    <link rel="stylesheet" href="./root/style/home.css">
     <title>Home</title>
 </head>
 
@@ -14,7 +14,7 @@
         <p />
         <!-- Aca el header -->
     <header class="nombre-tienda">
-        <img src="./img/Group.png" alt="">
+        <img src="./root/img/Group.png" alt="">
         <h2 class="titulo-tienda">Nombre Tienda</h2>
     </header>
 
@@ -31,9 +31,9 @@
         <div class="card-super-hero">
             <header>
                 <figure>
-                    <img class="header-image" src="./img/Mask Group (4).png" alt="baticueva">
-                    <img class="corazon" src="./img/Frame.png" alt="corazon">
-                    <img class="perfil-imagen" src="./img/Group 22 .png" alt="batman">
+                    <img class="header-image" src="./root/img/Mask Group (4).png" alt="baticueva">
+                    <img class="corazon" src="./root/img/Frame.png" alt="corazon">
+                    <img class="perfil-imagen" src="./root/img/Group 22 .png" alt="batman">
                 </figure>
             </header>
             <footer class="footer-card">
@@ -48,9 +48,9 @@
         <div class="card-super-hero">
             <header>
                 <figure>
-                    <img class="header-image" src="./img/Mask Group (1).png" alt="baticueva">
-                    <img class="corazon" src="./img/Frame.png" alt="corazon">
-                    <img class="perfil-imagen" src="./img/Group 23.png" alt="batman">
+                    <img class="header-image" src="./root/img/Mask Group (1).png" alt="baticueva">
+                    <img class="corazon" src="./root/img/Frame.png" alt="corazon">
+                    <img class="perfil-imagen" src="./root/img/Group 23.png" alt="batman">
                 </figure>
             </header>
             <footer class="footer-card">
@@ -63,9 +63,9 @@
         <div class="card-super-hero">
             <header>
                 <figure>
-                    <img class="header-image" src="./img/Mask Group (2).png" alt="baticueva">
-                    <img class="corazon" src="./img/Frame.png" alt="corazon">
-                    <img class="perfil-imagen" src="./img/Group 24.png" alt="batman">
+                    <img class="header-image" src="./root/img/Mask Group (2).png" alt="baticueva">
+                    <img class="corazon" src="./root/img/Frame.png" alt="corazon">
+                    <img class="perfil-imagen" src="./root/img/Group 24.png" alt="batman">
                 </figure>
             </header>
             <footer class="footer-card">
@@ -78,9 +78,9 @@
         <div class="card-super-hero">
             <header>
                 <figure>
-                    <img class="header-image" src="./img/Mask Group (3).png" alt="baticueva">
-                    <img class="corazon" src="./img/Frame.png" alt="corazon">
-                    <img class="perfil-imagen" src="./img/Group 25.png" alt="batman">
+                    <img class="header-image" src="./root/img/Mask Group (3).png" alt="baticueva">
+                    <img class="corazon" src="./root/img/Frame.png" alt="corazon">
+                    <img class="perfil-imagen" src="./root/img/Group 25.png" alt="batman">
                 </figure>
             </header>
             <footer class="footer-card">
@@ -93,7 +93,7 @@
     </section>
     <!--Aca el Boton de  + -->
     <div class="contenedor-boton-mas">
-        <a href="./form/form.html">
+        <a href="./root/form/form.html">
         <button class="boton-mas">+</button>
     </a>
     </div>
